--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,11 @@
     // Some stricter flags (disabled by default)
     "noUnusedLocals": false,
     "noUnusedParameters": false,
-    "noPropertyAccessFromIndexSignature": false
+    "noPropertyAccessFromIndexSignature": false,
+    "baseUrl": ".",
+    "paths": {
+      "pinod/file-provider": ["./dist/types/file-provider.d.ts"],
+      "pinod": ["./dist/types/pinod.d.ts"]
+    }
   }
 }
